# intrusion

./: Makefile  pyproject.toml
client/: index.html
intrusion/: cards.py  game.py  server.py
