[tool.poetry]
name = "intrusion"
version = "0.1.0"
description = ""
authors = ["Adam Powers <apowers@ato.ms>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
python-multipart = "^0.0.17"
websockets = "^14.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
